--- a/packages/app-store-cli/package.json
+++ b/packages/app-store-cli/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "bin": "dist/cli.js",
   "engines": {
-    "node": ">=10"
+    "node": "18",
+    "yarn": "3.4.1"
   },
   "scripts": {
     "build": "ts-node --transpile-only src/build.ts",
