--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "test-e2e:embed": "yarn db-seed && yarn e2e:embed",
     "test-e2e:embed-react": "yarn db-seed && yarn e2e:embed-react",
     "test-playwright": "yarn playwright test --config=playwright.config.ts",
-    "test": "vitest run",
+    "test": "vitest related packages/features/bookings/lib/handleNewBooking.test.ts",
     "type-check": "turbo run type-check",
     "type-check:ci": "turbo run type-check:ci --log-prefix=none",
     "web": "yarn workspace @calcom/web"
