--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -4,5 +4,10 @@
       "path": "/api/cron/calendar-cache-cleanup",
       "schedule": "0 5 * * *"
     }
-  ]
+  ],
+  "functions": {
+    "api/book/*": {
+      "maxDuration": 300
+    }
+  }
 }
