--- a/turbo.json
+++ b/turbo.json
@@ -219,6 +219,7 @@
     "NEXT_PUBLIC_DISABLE_SIGNUP",
     "NEXT_PUBLIC_EMBED_LIB_URL",
     "NEXT_PUBLIC_MENTO_COACH_URL",
+    "NEXT_PUBLIC_MENTO_URL",
     "NEXT_PUBLIC_HOSTED_CAL_FEATURES",
     "NEXT_PUBLIC_MINUTES_TO_BOOK",
     "NEXT_PUBLIC_SENDER_ID",
