--- a/turbo.json
+++ b/turbo.json
@@ -259,6 +259,7 @@
     "NEXT_PUBLIC_EMBED_LIB_URL",
     "NEXT_PUBLIC_MENTO_COACH_URL",
     "NEXT_PUBLIC_MENTO_URL",
+    "NEXT_PUBLIC_MENTO_WEB_URL",
     "NEXT_PUBLIC_HOSTED_CAL_FEATURES",
     "NEXT_PUBLIC_MINUTES_TO_BOOK",
     "NEXT_PUBLIC_SENDER_ID",
